REVIEW - issue GWDP-660: Unnecessary Scrollbars in Filters in IE https://internal.cida.usgs.gov/jira/browse/GWDP-660
Merged.
Also tweaked position of help icon.

--- a/src/main/webapp/assets/css/custom.css
+++ b/src/main/webapp/assets/css/custom.css
@@ -692,6 +692,24 @@ td.well-log-small-table{
 	padding: 10px;
 }
 
+.ngwmn-help-tip p{
+    margin-bottom: 1em;
+}
+
+.ngwmn-help-tip span{
+    font-size: 1em;
+    font-weight: bold;
+}
+
+.ngwmn-help-tip ul{
+    padding-left: 1em;
+}
+
+.ngwmn-help-tip ol{    
+    padding-left: 2em;
+    list-style-type: decimal;
+}
+
 #ccsa-area {
 	background-color: white;
 }
